--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
   postgres:
     image: postgres:13.4-alpine
     volumes:
-      - ./docker_volumes/postgres/data/:/var/lib/postgresql/data/
+      - pg_data:/var/lib/postgresql/data/
     env_file:
       - ./docker_config/postgres_environment.env
     restart: on-failure
@@ -133,3 +133,6 @@ services:
     ports:
       - "5432:5432"
       - "6432:5432"
+
+volumes:
+  pg_data:
